<resources>
    <string name="app_name" translatable="false">Newzy</string>
    <string name="app_catch" translatable="false">Custom \"Newzy\" News!</string>
    <string name="newzy_image" translatable="false">newzy image</string>
    <string name="newzy_logo" translatable="false">newzy logo</string>
    <string name="loading_newzy">Loading Newzy&#8230;</string>
    <string name="date_pattern_in" translatable="false">"yyyy-MM-dd\'T\'HH:mm:ss\'Z\'"</string>
    <string name="date_pattern_out" translatable="false">"d MMM yyyy h:mm a"</string>
    <string name="utc" translatable="false">" UTC"</string>
    <string name="date_format" translatable="false">YYYY-MM-DD</string>
    <string name="progress_image" translatable="false">progress image</string>
    <string name="empty_view_image" translatable="false">Empty View Image</string>
    <string name="empty_string" />
    <string name="null_string">null</string>
    <string name="country" translatable="false">country</string>
    <string name="q" translatable="false">q</string>
    <string name="from" translatable="false">from</string>
    <string name="to" translatable="false">to</string>
    <string name="sortby" translatable="false">sortBy</string>
    <string name="pagesize" translatable="false">pageSize</string>
    <string name="apikey" translatable="false">apiKey</string>
    <string name="titles_and_searches">TITLES &amp; SEARCHES</string>
    <string name="organize">ORGANIZE</string>
    <string name="optional">OPTIONAL</string>
    <string name="news_api_key">News API Key</string>
    <string name="support_screen">Support Screen</string>
    <string name="support_screen_summary">Display Newzy support screen at launch</string>
    <string name="show_support">show-support</string>
    <string name="local_headlines">Local Headlines</string>
    <string name="newzy_title">Newzy Title</string>
    <string name="newzy_search">Newzy Search</string>
    <string name="provide_newzy_title">Provide Newzy Title</string>
    <string name="provide_newzy_search">Provide Newzy Search</string>
    <string name="sort_newzys_by">Sort Newzys By</string>
    <string name="newest">Newest</string>
    <string name="relevance">Relevance</string>
    <string name="popularity">Popularity</string>
    <string name="newzys_to_retrieve">Newzys To Retrieve (max.)</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="choose_your_newzys">Choose your Newzys!</string>
    <string name="headlines">Headlines</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activate">ACTIVATE</string>
    <string name="customize">CUSTOMIZE</string>
    <string name="search">SEARCH</string>
    <string name="dates">DATES</string>
    <string name="powered_by">Powered by:</string>
    <string name="version">version</string>
    <string name="support_activate">Newzy is activated with a free News API Key. Benefits of this key include up to 500 search requests per day (250 requests per 12 hours.) NOTE: during News API Key registration, check the box to \"add an attribution link.\" Newzy provides this link within the app to satisfy this requirement. Once obtained, provide your 32-character key in Settings. Get your key at:</string>
    <string name="support_customize">Configured within Settings, set the Newzy \"Headlines\" for your country of choice. News API tracks headlines across 50+ countries.\n\nIn addition to setting the local Newzy \"Headlines,\" Newzy includes up to six (6) custom Newzy Titles and Searches. Also configured within Settings, Newzy Titles are descriptive labels for your personal Newzy Searches and appear in the drawer menu.</string>
    <string name="support_search">Newzy Searches contain the words and phrases you seek in your news results. These searches (also configured in Settings) may range from simple to more complex. Search tips:\n\n&#8226; Surround phrases with quotes (\") for an exact match.\nExample: \"Bitcoin Marketplace\"\n\n&#8226; Prepend words or phrases that must appear in your results with a plus (+) symbol.\nExample: +bitcoin\n\n&#8226; Prepend words or phrases that must not appear in your results with a minus (-) symbol.\nExample: -bitcoin\n\n&#8226; Alternatively, you may use the AND / OR / NOT keywords, and optionally group these with parentheses.\nExample: crypto AND (ethereum OR litecoin) NOT bitcoin</string>
    <string name="support_dates">Focus your custom Newzys with an optional date range in Settings. News API provides items up to ONE month old. NOTE: date settings do not apply to local \"Headlines.\" Dates should be entered in YYYY&#8211;MM&#8211;DD format.\nExample: 2019&#8211;07&#8211;26</string>
    <string name="news_api_org" translatable="false">NewsAPI.org</string>
    <string name="news_api_reg" translatable="false">NewsAPI.org/register</string>
    <string name="news_api_org_url" translatable="false">https://newsapi.org</string>
    <string name="news_api_reg_url" translatable="false">https://newsapi.org/register</string>
    <string name="no_internet_available">No internet available.\nPlease check internet connectivity and try again.</string>
    <string name="no_newzys_to_display">No Newzys to display.\nPlease confirm settings for API Key, searches, keywords or choose other Newzys.</string>
    <string name="default_request_url"><![CDATA[https://newsapi.org/v2/top-headlines?]]></string>
    <string name="custom_request_url"><![CDATA[https://newsapi.org/v2/everything?]]></string>
    <string name="settings_sort_newzys_by_label">@string/sort_newzys_by</string>
    <string name="settings_sort_newzys_by_key" translatable="false">@string/sortby</string>
    <string name="settings_sort_newzys_by_default" translatable="false">@string/settings_sort_newzys_by_newest_value</string>
    <string name="settings_sort_newzys_by_newest_label">@string/newest</string>
    <string name="settings_sort_newzys_by_newest_value" translatable="false">publishedAt</string>
    <string name="settings_sort_newzys_by_relevancy_label">@string/relevance</string>
    <string name="settings_sort_newzys_by_relevancy_value" translatable="false">relevancy</string>
    <string name="settings_sort_newzys_by_popularity_label">@string/popularity</string>
    <string name="settings_sort_newzys_by_popularity_value" translatable="false">popularity</string>
    <string name="settings_newzys_to_retrieve_label">@string/newzys_to_retrieve</string>
    <string name="settings_newzys_to_retrieve_key" translatable="false">@string/pagesize</string>
    <string name="settings_newzys_to_retrieve_default" translatable="false">@string/settings_10_newzys_value</string>
    <string name="settings_10_newzys_label">10</string>
    <string name="settings_10_newzys_value" translatable="false">10</string>
    <string name="settings_20_newzys_label">20</string>
    <string name="settings_20_newzys_value" translatable="false">20</string>
    <string name="settings_50_newzys_label">50</string>
    <string name="settings_50_newzys_value" translatable="false">50</string>
    <string name="settings_100_newzys_label">100</string>
    <string name="settings_100_newzys_value" translatable="false">100</string>
    <string name="settings_country_label">@string/local_headlines</string>
    <string name="settings_country_key" translatable="false">@string/country</string>
    <string name="settings_country_default" translatable="false">@string/settings_us_value</string>
    <string name="settings_ar_label">Argentina</string>
    <string name="settings_au_label">Australia</string>
    <string name="settings_at_label">Austria</string>
    <string name="settings_be_label">Belgium</string>
    <string name="settings_br_label">Brazil</string>
    <string name="settings_bg_label">Bulgaria</string>
    <string name="settings_newzys_from_date_label">@string/from_date</string>
    <string name="settings_newzys_from_date_key" translatable="false">@string/from</string>
    <string name="provide_optional_from_date">Provide From Date:</string>
    <string name="settings_newzys_to_date_label">@string/to_date</string>
    <string name="settings_newzys_to_date_key" translatable="false">@string/to</string>
    <string name="provide_optional_to_date">Provide To Date:</string>
    <string name="settings_show_support_label">@string/support_screen</string>
    <string name="settings_show_support_key" translatable="false">@string/show_support</string>
    <string name="settings_show_support_default" translatable="false">true</string>
    <string name="settings_api_key_label">@string/news_api_key</string>
    <string name="settings_api_key_key" translatable="false">@string/apikey</string>
    <string name="provide_api_key">Provide News API key</string>
    <string name="settings_newzy_title_one_label">@string/newzy_title</string>
    <string name="settings_newzy_title_one_key" translatable="false">title1</string>
    <string name="provide_newzy_title_one">@string/provide_newzy_title</string>
    <string name="settings_newzy_title_two_label">@string/newzy_title</string>
    <string name="settings_newzy_title_two_key" translatable="false">title2</string>
    <string name="provide_newzy_title_two">@string/provide_newzy_title</string>
    <string name="settings_newzy_title_three_label">@string/newzy_title</string>
    <string name="settings_newzy_title_three_key" translatable="false">title3</string>
    <string name="provide_newzy_title_three">@string/provide_newzy_title</string>
    <string name="settings_newzy_title_four_label">@string/newzy_title</string>
    <string name="settings_newzy_title_four_key" translatable="false">title4</string>
    <string name="provide_newzy_title_four">@string/provide_newzy_title</string>
    <string name="settings_newzy_title_five_label">@string/newzy_title</string>
    <string name="settings_newzy_title_five_key" translatable="false">title5</string>
    <string name="provide_newzy_title_five">@string/provide_newzy_title</string>
    <string name="settings_newzy_title_six_label">@string/newzy_title</string>
    <string name="settings_newzy_title_six_key" translatable="false">title6</string>
    <string name="provide_newzy_title_six">@string/provide_newzy_title</string>
    <string name="settings_newzy_search_one_label">@string/newzy_search</string>
    <string name="settings_newzy_search_one_key" translatable="false">search1</string>
    <string name="provide_newzy_search_one">@string/provide_newzy_search</string>
    <string name="settings_newzy_search_two_label">@string/newzy_search</string>
    <string name="settings_newzy_search_two_key" translatable="false">search2</string>
    <string name="provide_newzy_search_two">@string/provide_newzy_search</string>
    <string name="settings_newzy_search_three_label">@string/newzy_search</string>
    <string name="settings_newzy_search_three_key" translatable="false">search3</string>
    <string name="provide_newzy_search_three">@string/provide_newzy_search</string>
    <string name="settings_newzy_search_four_label">@string/newzy_search</string>
    <string name="settings_newzy_search_four_key" translatable="false">search4</string>
    <string name="provide_newzy_search_four">@string/provide_newzy_search</string>
    <string name="settings_newzy_search_five_label">@string/newzy_search</string>
    <string name="settings_newzy_search_five_key" translatable="false">search5</string>
    <string name="provide_newzy_search_five">@string/provide_newzy_search</string>
    <string name="settings_newzy_search_six_label">@string/newzy_search</string>
    <string name="settings_newzy_search_six_key" translatable="false">search6</string>
    <string name="provide_newzy_search_six">@string/provide_newzy_search</string>
</resources>